2005-01-03  John Sullivan  <john@wjsullivan.net>

	* delicioapi.el (delicious-api-html): Fixed a
	parentheses-oops. Added code to retrieve and return the HTML list
	from the DELICIOUS-API-BUFFER after contacting the server. I'm
	doing this in a very primitive way, but it seems to work so
	far. Function is not yet documented.

2004-12-25  John Sullivan  <john@wjsullivan.net>

	* delicioapi.el (delicious-api-build-html-request): Added separate
	function to handle fetching HTML feed requests, because these
	requests use a different address.
	(General): Tried to fix whitespace and indentation issues.
	(delicious-api-html): New variable to hold URL path for del.icio.us
	HTML feed.

	* README (Commands): Added description of M-x
	delicious-build-tags-list.
	(Commands): Added description of M-x delicious-build-posts-list.
	(Advanced use): Remove outdated section about refreshing.

	* delicious.el: Remove extraneous comments about to-do items.
	(delicious-duplicate-url-p): Broke post server refresh out into
	separate function. Removed extraneous comment.
	(delicious-build-posts-list): New interactive function. Refresh
	the list of posts from the server. Mainly used for duplicate
	checking.
	
2004-12-24  John Sullivan  <john@wjsullivan.net>

	* delicious.el (delicious-suggest-tags): When comparing buffer
	contents to tag list, ignore case.
	(delicious-buffer-words): Changed this to return lowercase words.

2004-12-23  John Sullivan  <john@wjsullivan.net>

	* README (Keywords): Added description of tag suggesting.

	* delicious.el (delicious-read-url): Moved duplicate checking so
	that it occurs immediately after the URL prompt. 
	(delicious-duplicate-url-p): Changed behavior to throw error if
	duplicate is not desired.
	(delicious-post): Removed duplicate checking from this stage.
	(delicious-suggest-tags): Function which suggests tags to use
	above the prompt. Currently, suggestions are just based on overlap
	between words in the buffer and words in your tags list.